--- a/templates/smalltime.html
+++ b/templates/smalltime.html
@@ -1,8 +1,7 @@
 <form class="flexcol">
   <div id="slideContainer">
-    <input id="timeSlider" class="slider sun"
-      type="range" min="0" max="1440" step="30" value="{{timeValue}}"
-      name="timeSlider"/>
+    <input id="timeSlider" class="slider sun" type="range" min="0" max="1440" step="30" value="{{timeValue}}"
+      name="timeSlider" />
     <div class="darkness-select"></div>
   </div>
   <div id="displayContainer">
